# sql-trainer

./: 123.sqlite  Cargo.toml  README.md  ai.sqlite
src/: lib.rs  main.rs
