[package]
name = "sql-trainer"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = "0.37.0"
tabled = "0.20.0"
clap = { version = "4", features = ["derive"] }
reqwest = "0.12.23"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ollama-rs = "0.3.2"
regex = "1.11.2"
ansi_term = "0.12.1"
