[package]
name = "sql-trainer"
version = "0.1.1"
edition = "2024"
description = "A CLI for learning SQL in a playground environment. Uses AI to generate Databases."
license = "MIT"
repository = "https://github.com/lazy-sock/sql-trainer"
keywords = ["cli", "sql"]
categories = ["command-line-utilities"]

[dependencies]
rusqlite = "0.37.0"
tabled = "0.20.0"
clap = { version = "4", features = ["derive"] }
reqwest = "0.12.23"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ollama-rs = "0.3.2"
regex = "1.11.2"
ansi_term = "0.12.1"
